# BdoLifeCompanion-Pub

./: .gitignore  CHANGELOG.md  README.md  USER-GUIDE.md  components.json  package-lock.json  package.json  tailwind.config.js  vite.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: utils.ts
src/lib/components/: AboutView.svelte  AnnouncementCarousel.svelte  BarterInventory.svelte  BarterTracker.svelte  BarteringView.svelte  BossBar.svelte  BossCountdown.svelte  BossSettingsPanel.svelte  CraftingLogView.svelte  CraftingPlanner.svelte  CraftingView.svelte  DashboardPanel.svelte  DashboardView.svelte  GrindingTracker.svelte  HexBackground.svelte  HuntingTracker.svelte  InventoryView.svelte  IslandNode.svelte  LogsView.svelte  MediumMode.svelte  MiniMode.svelte  ParleyCalculator.svelte  ResetTimers.svelte  RouteMapPreview.svelte  RouteTradePopover.svelte  RoutesView.svelte  SailorTracker.svelte  SettingsView.svelte  ShipProgress.svelte  TimerView.svelte  TitleBar.svelte  ToastContainer.svelte  TreasureTracker.svelte  WeeklyTasksView.svelte
src/lib/constants/: announcements.ts  boss-data.ts  chart-theme.ts  index.ts  materials.ts  reset-data.ts
src/lib/models/: announcements.ts  bartering.ts  crafting.ts  index.ts  planner.ts  recipe-catalog.ts  recipe.ts  weekly-tasks.ts
src/routes/: +layout.svelte  +page.svelte
static/bosses/: README.md
static/icons/: README.md
static/items/: README.md
static/treasures/: README.md
(+56 files in other folders)
